make sure if we can't start a new thread for a socket, we release the connection ticket SERVER-2537